--- a/port.html
+++ b/port.html
@@ -44,12 +44,12 @@
 -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
-    <p>Phone: 123-456-7890</p>
+    <p>Email: sohammayurroll@gmail.com</p>
+    <p>Phone: 9330974731</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Soham Mayur. All rights reserved.</p>
   </footer>
 </body>
 </html>
